# economics_dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  config.py  design_tokens.py  main.py  state.py
app/components/: __init__.py  filters.py  header.py  hero_metrics.py
app/components/charts/: __init__.py  composition.py  dual_axis.py  heat_map.py  rate_trends.py  sparklines.py  transactions.py
app/components/panels/: __init__.py  economic_context.py  footer.py  housing_composition.py  regional_spotlight.py
app/services/: __init__.py  data_service.py
assets/: styles.css
data/: __init__.py  exceptions.py
data/cache/: __init__.py  manager.py  scheduler.py
data/clients/: __init__.py  bank_of_england.py  base.py  land_registry.py  ons.py
data/models/: __init__.py  cache.py  economic.py  housing.py  monetary.py
data/transformers/: __init__.py  base.py  economic.py  housing.py  monetary.py
design/: api_integration_guide.md  dashboard_requirements.md  figma_ai_dashboard_prompt.txt  implementation_plan.md  software_architecture.md
tests/: __init__.py  conftest.py
tests/fixtures/: sample_boe_response.csv  sample_land_registry.csv  sample_ons_response.csv
tests/integration/: __init__.py  test_data_pipeline.py  test_performance.py
tests/unit/: __init__.py
tests/unit/test_cache/: __init__.py  test_manager.py  test_scheduler.py
tests/unit/test_clients/: test_boe_client.py  test_ons_client.py  (+1 more)
(+4 files in other folders)
